--- a/src/app/dialog-file/dialog-file.component.html
+++ b/src/app/dialog-file/dialog-file.component.html
@@ -1,14 +1,19 @@
 <form id="uploadForm" method="post" enctype="multipart/form-data" (ngSubmit)="onUpload($event)">
-  <!-- <p-fileUpload name="file" customUpload="true" (uploadHandler)="onUpload($event)"
-    [showCancelButton]="false" chooseLabel="Seleccionar" uploadLabel="Cargar" maxFileSize="10000000" method="post">
-  </p-fileUpload> -->
-  <input type="file" name="file" id="upload-file-input" />
-  <button type="submit" [disabled]="type === 'csv' && val1 === undefined">Cargar</button>
+  <input type="file" name="file" id="upload-file-input" (change)="validateFormat($event)"/> &nbsp;
+  <button type="submit" [disabled]="type === 'csv' && valueCoordenate === undefined || formatError">Cargar</button>
 </form>
 <div class="ui-g" style="width:250px;margin-bottom:10px" *ngIf="type === 'csv'">
-  <div class="ui-g-12"><p-radioButton name="group1" value="G" label="Geográficas (grados decimales)" [(ngModel)]="val1" inputId="opt1"></p-radioButton></div>
-  <div class="ui-g-12"><p-radioButton name="group1" value="P" label="Planas (MAGNA-SIRGAS Origen Bogotá)" [(ngModel)]="val1" inputId="opt2"></p-radioButton></div>
+  <div class="ui-g-12">
+    <p-radioButton name="group1" value="G" label="Geográficas (grados decimales)" [(ngModel)]="valueCoordenate" inputId="opt1">
+    </p-radioButton>
+  </div>
+  <div class="ui-g-12">
+    <p-radioButton name="group1" value="P" label="Planas (MAGNA-SIRGAS Origen Bogotá)" [(ngModel)]="valueCoordenate"
+      inputId="opt2"></p-radioButton>
+  </div>
 </div>
 <br>
 <p-message id="infoMedicion" severity="info"
-  text="Seleccione un <b>archivo local</b> para cargarlo como una capa sobre el mapa"></p-message>
+text="Seleccione un <b>archivo local</b> para cargarlo como una capa sobre el mapa"></p-message>
+<br><p-message *ngIf="formatError" id="infoMedicion" severity="error"
+text="Formato no aceptado"></p-message>
