--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -1,17 +1,17 @@
 @import url('https://js.arcgis.com/4.12/esri/css/main.css');
 #menu {
-    background: #ffffff;
-    /* background-image: url("../../assets/logo-anh-p.png"); */
-    background-repeat: no-repeat;
-    /* width: 160px;
-    padding: 29px;
-    margin-top: 5px;
-    border: none; */
-    /* height: 54px; */
-
     background-image: url("../../assets/logo-anh-q.png");
     height: 67px;
     width: 188px;
+}
+
+#opacidad {
+    width: 100%;
+    height: 100%;
+    background-color: #888;
+    opacity: 0.5;
+    position: absolute;
+    z-index: 10;
 }
 
 #menu-info {
@@ -57,6 +57,17 @@
     padding: 0 !important;
 }
 
+::ng-deep body .ui-panelmenu .ui-panelmenu-header > a {
+    border: none;
+}
+
+::ng-deep body .ui-dialog .ui-dialog-titlebar {
+    border: none;
+}
+
+::ng-deep body .ui-dialog .ui-dialog-content {
+    border: none;
+}
 /* width */
 
 ::-webkit-scrollbar {
