Ajuste: Informacuión en dialog Zona de influencia

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -93,6 +93,13 @@
     </p-button>
     <br>
   </div>
+  <p-message id="infoMedicion" severity="info"
+      text="La <b>anchura del área de influencia (buffer)</b> se mide apartir del
+      <br> contorno de la geometría. Cuando se usa un punto, la anchura equivale
+      <br> al <b>radio</b> del círculo resultante.
+      <br>Para dibujar un punto haga <b>clic</b> en el mapa.
+      <br>Para las demás herramientas haga <b>clic</b> y sostenga mientras mueve
+      <br>el mouse y suelte para finalizar."></p-message>
 </p-dialog>
 <!-- Fin del modal de zona de influencia -->
 
