--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -14,12 +14,19 @@
     z-index: 10;
 }
 
+::ng-deep body .ui-tieredmenu {
+    border: none;
+    border-radius: 0px;
+}
+::ng-deep body .ui-megamenu .ui-megamenu-panel {
+    margin-left: 50px;
+}
+
 #menu-info {
   z-index: 5;
-  background: #ffffff;
   /* text-align: center; */
   position: absolute;
-  width: 190px;
+  width: auto;
 }
 
 /* #region  Accordion*/
@@ -337,21 +344,30 @@ p-sidebar {
     }
 }
 
-.loading-machin {
-    position: fixed;
+#loading {
     top: 50%;
     left: 50%;
+    z-index: 1001;
+    width: 73px;
+    position: fixed;
+}
+
+.loading-machin {
+    position: fixed;
     width: 144px;
     height: 90px;
     background: url(../../assets/pozo.gif);
     margin-top: -72px;
     margin-left: -72px;
-    z-index: 1001;
 }
 
 #attributeTable {
     padding: 0.5em;
     background-color: #fff;
+}
+
+::ng-deep body .ui-accordion-header {
+    border: none;
 }
 
 /* Safari 4.0 - 8.0 */
