Ajuste: Se modifica el Time Slider

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -446,7 +446,10 @@ p-sidebar {
   /* background-color: #FF9900; */
   height: 6px !important;
   top: -2px !important;
+}
 
+::ng-deep .esri-slider__max {
+  margin-left: 5px !important;
 }
 
 #infoDiv {
