--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -456,8 +456,8 @@ p-sidebar {
   margin-left: 65px !important;
 }
 
-::ng-deep .ui.menuitem-link {
-  height: 40.1px !important;
+::ng-deep .ui-tieredmenu .ui-menuitem-icon{
+  height: 18.89px !important;
 }
 #infoDiv {
     padding: 5px;
