Ajuste: Scroll en guía

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -207,7 +207,7 @@
 
 <!-- Modal de ayuda -->
 <p-dialog header="Ayuda del Geovisor ANH v3" [(visible)]="modalGuide" [resizable]="false">
-  <app-dialog-guide></app-dialog-guide>
+  <app-dialog-guide [flag]="modalGuide"></app-dialog-guide>
 </p-dialog>
 <!-- Fin del modal de ayuda -->
 
