--- a/src/app/dialog-guide/dialog-guide.component.html
+++ b/src/app/dialog-guide/dialog-guide.component.html
@@ -2,7 +2,55 @@
   <div class="p-grid">
     <div class="p-col-3">
       <div class="help-nav">
+        <ul class="nav navbar-nav bs-docs-sidenav">
 
+          <li class="active">
+            <a href="#h-introduccion" id="help-top">Introducción</a>
+          </li>
+          <li class="">
+            <a href="#h-acerca-de">Acerca del Geovisor ANH</a>
+            <ul class="nav">
+              <li class=""><a href="#h-geovisor">¿Qué puedes hacer con el Geovisor ANH?</a></li>
+              <li class=""><a href="#h-terminos">Términos y Condiciones de Uso</a></li>
+              <li class=""><a href="#h-contacto">Puntos de Contacto</a></li>
+            </ul>
+          </li>
+
+          <li class=""><a href="#h-navegadores">Navegadores Compatibles</a></li>
+
+
+          <li class="">
+            <a href="#h-pasos">Primeros Pasos</a>
+            <ul class="nav">
+              <li class=""><a href="#h-ejecucion">Ejecución del Geovisor ANH</a></li>
+              <li class=""><a href="#h-acceso">Acceso al Geovisor ANH</a></li>
+            </ul>
+          </li>
+          <li class="">
+            <a href="#h-descripcion">Descripción del Geovisor ANH</a>
+            <ul class="nav">
+              <li class=""><a href="#h-encuentre">Encuentre lo que Busca</a></li>
+              <li class=""><a href="#h-seleccion">Selección de Capa de Trabajo</a></li>
+
+            </ul>
+          </li>
+          <li class="">
+            <a href="#h-uso">Uso de Herramientas</a>
+            <ul class="nav">
+              <li class=""><a href="#h-navegar">Navegación</a></li>
+              <li class=""><a href="#h-medir">Medición</a></li>
+              <li class=""><a href="#h-seleccionar">Selección</a></li>
+              <li class=""><a href="#h-informacion">Información</a></li>
+              <li class=""><a href="#h-importar">Importar Capas</a></li>
+              <li class=""><a href="#h-extraer">Extraer Datos</a></li>
+              <li class=""><a href="#h-espacial">Análisis Espacial</a></li>
+            </ul>
+          </li>
+
+        </ul>
+        <a class="back-to-top" href="#help-top">
+          Volver Arriba
+        </a>
       </div>
     </div>
     <div class="p-col-9">
