--- a/src/app/dialog-guide/dialog-guide.component.html
+++ b/src/app/dialog-guide/dialog-guide.component.html
@@ -728,7 +728,7 @@
           <p>Como resultado obtienes un archivo zip, que contiene el Shapefile con la información del porcentaje
             de cobertura de cada bloque.</p>
 
-          <h3>Zona de Influencia (Buffer)</h3>
+          <h3 id="buffer">Zona de Influencia (Buffer)</h3>
           <p>Esta función permite dibujar un gráfico y aplicarle una simetría (buffer) alrededor a partir de una
             distancia determinada.</p>
           <!-- <img src="assets/images/help/42.jpg" alt="" title="" /> -->
