Ajuste: Botones en el menú

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -4,6 +4,16 @@
 <div id="menu-info" *ngIf="view.ready">
   <p-header>
     <div class="logo-toggler display" id="menu"></div>
+    <div id="buttons">
+      <p-button icon="fa fa-ruler-horizontal" [style]="{'background-color': '#E18230', 'border-color': '#E18230'}"
+        title="Tomar medidas">
+      </p-button>
+      <p-button icon="esri-icon-cursor" [style]="{'background-color': '#D75C31', 'border-color': '#D75C31'}"
+        title="Seleccionar"></p-button>
+      <p-button icon="esri-icon-description" [style]="{'background-color': '#CC3D36', 'border-color': '#CC3D36'}"
+        title="Identificar" (onClick)="this.view.popup.autoOpenEnabled = !this.view.popup.autoOpenEnabled">
+      </p-button>
+    </div>
   </p-header>
   <div>
     <p-tieredMenu [style]="{'width': 'auto'}" id="content-menu" [model]="menu"></p-tieredMenu>
