--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -6,7 +6,7 @@
     <div class="logo-toggler display" id="menu"></div>
     <div id="buttons">
       <p-button icon="fa fa-ruler-horizontal" [style]="{'background-color': '#E18230', 'border-color': '#E18230'}"
-        title="Tomar medidas">
+        title="Tomar medidas" (onClick)="openMeasuringTools()">
       </p-button>
       <p-button icon="esri-icon-cursor" [style]="{'background-color': '#D75C31', 'border-color': '#D75C31'}"
         title="Seleccionar"></p-button>
