--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -34,6 +34,12 @@
 </div>
 <!-- Fin del tierra slider del mapa -->
 
+<!--Footer-->
+<div id="footer">
+  <img src="../../assets/mineria.png">
+</div>
+<!-- Fin Footer-->
+
 <!-- Modal de extracción de datos -->
 <p-dialog header="Extracción de datos" [(visible)]="modalExtract" [resizable]="false" (onHide)="onHideDialogExtract()"
   [positionTop]="10" [positionLeft]="200">
