--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -209,13 +209,13 @@
       </ul>
     </div>
     <div class="p-grid p-dir-col">
-      <div class="p-col">
+      <div class="p-col" style="margin: 0 auto;">
         <button pButton type="button" label="Abrir Guía del Usuario" class="ui-button-raised" icon="fa fa-book-open"
           (click)="onShowGuide()"></button>
-      </div>
-      <div class="p-col">
-        <button pButton type="button" label="Acerca de Geovisor ANH" class="ui-button-raised ui-button-secondary"
-          icon="pi pi-info-circle" (click)="onShowAbout()"></button>
+          <button pButton type="button" label="Acerca de Geovisor ANH" class="ui-button-raised ui-button-secondary"
+            icon="pi pi-info-circle" (click)="onShowAbout()"></button>
+      <!-- </div>
+      <div class="p-col"> -->
       </div>
     </div>
   </div>
