--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -201,14 +201,14 @@
       </div>
     </div>
     <div class="body-help">
-      Puedes <b>hacer clic</b> sobre los elementos de tu interés en el mapa o... <ul>
+      Puedes <b>hacer clic</b> sobre los elementos de tu interés en el mapa o ... <ul>
         <li> <b>Encuentra arriba</b> lo que buscas.</li>
         <li> <b>Usa las herramientas</b> del menú de arriba a la izquierda.</li>
         <li> Selecciona a la derecha <b>la capa de trabajo</b>, controla <b>transparencia</b> y ve las <b>convenciones
             del mapa</b> y <b>atributos de los elementos</b> seleccionados.</li>
       </ul>
     </div>
-    <div class="p-grid p-dir-col">
+    <div align="center" class="p-grid p-dir-col">
       <div class="p-col" style="margin: 0 auto;">
         <button pButton type="button" label="Abrir Guía del Usuario" class="ui-button-raised" icon="fa fa-book-open"
           (click)="onShowGuide()"></button>
