--- a/src/app/dialog-file/dialog-file.component.html
+++ b/src/app/dialog-file/dialog-file.component.html
@@ -2,7 +2,7 @@
       (click)="requestHelp('h-importar')" icon="pi pi-question"></button>
 <form id="uploadForm" method="post" enctype="multipart/form-data" (ngSubmit)="onUpload($event)">
   <input type="file" name="file" id="upload-file-input" (change)="validateFormat($event)"/> &nbsp;
-  <button type="submit" [disabled]="type === 'csv' && valueCoordenate === undefined || formatError">Cargar</button>
+  <button type="submit" [disabled]="type === '.csv' && valueCoordenate === undefined || formatError">Cargar</button>
 </form>
 <div class="ui-g" style="width:250px;margin-bottom:10px" *ngIf="type === '.csv'">
   <div class="ui-g-12">
