Ajuste: Control de ver tod, volver a la vista inicial del mapa

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -399,7 +399,7 @@ p-sidebar {
   /* justify-content: center; */
   padding: 4px;
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto auto auto;
   background-color: white;
 }
 
