--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -226,14 +226,28 @@ p-sidebar {
     position: fixed;
 }
 
-.loading-machin {
+/* .loading-machin {
     position: fixed;
     width: 144px;
     height: 90px;
     background: url(../../assets/pozo.gif);
     margin-top: -72px;
     margin-left: -72px;
+} */
+
+.loading-machin {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 144px;
+  height: 144px;
+  background: url(../../assets/machin144_sombra-suave.png) -5px -20px;
+  margin-top: -72px;
+  margin-left: -72px;
+  animation: mymove 1.6s steps(30, end) infinite;
+  z-index: 1001;
 }
+
 
 #attributeTable {
     padding: 0.5em;
@@ -405,7 +419,7 @@ p-sidebar {
   /* justify-content: center; */
   padding: 4px;
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto;
   background-color: white;
 }
 
