Ajuste: Cambio de título a botón

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -44,7 +44,7 @@
           title="Identificar" (onClick)="openEnabledPopup()">
         </p-button>
         <p-button icon="esri-icon-download" [style]="{'background-color': '#44546A', 'border-color': '#44546A'}"
-          title="Identificar" (onClick)="openExtract()">
+          title="Extraer capa general" (onClick)="openExtract()">
         </p-button>
       </div>
       <div>
